syntax = "proto3";

import "SkaiMsgType.proto";

message SkaimotMsg {
    
    SkaiMsgType msg_type_id = 1;


}