syntax = "proto3";

package skaiproto.skaimot;

// bounding box defined with 
// top left, bottom right corners that are floats from 0 to 1
message TLBR_Box {
    // floats from 0 to 1 scaled with width/height
    float top = 1;
    float left = 2;
    float bottom = 3;
    float right = 4;
}

// face embedding for improving recall/recognition
message FaceEmbedding {
    // list of floats
    repeated float vals = 1;

    // metadata only used by other messages
    uint64 timestamp = 2;
    uint64 skaimot_id = 3;

    // skaimot future work (will append a confidence later, for now set to 1.0)
    float confidence = 4;

    // appended by global track handler
    uint64 camera_id = 5; // camera mac address turned into serial num
    TLBR_Box box = 6; // tlbr 0 to 1 scaled
}

// bbox embedding for improving recall/recognition
message BBoxEmbedding {
    // list of floats
    repeated float vals = 1;

    // metadata only used by other messages
    uint64 timestamp = 2;   
    uint64 skaimot_id = 3;

    // skaimot future work (will append a confidence later, for now set to 1.0)
    float confidence = 4;

    // appended by global track handler
    uint64 camera_id = 5; // camera mac address turned into serial num
    TLBR_Box box = 6; // tlbr 0 to 1 scaled
}

// employee vs customer vs uninitialized classification
enum Classification {
    INIT = 0;
    EMPLOYEE = 1;
    CUSTOMER = 2;
    VEHICLE = 3;
}

// the main message
message SkaimotProtoMsg {
    
    message CameraFrame {
        
        // camera mac address turned into serial num
        uint64 camera_id = 1;

        // 1e9 * epoch timestamp
        uint64 timestamp = 2;

        // people in frame
        message Person {
            
            // skaimot id num
            uint64 id = 1;

            // classification enum 
            Classification classification = 2;

            // top left bottom right defined bounding box
            TLBR_Box box = 3;

            // embeddings (list of floats) to help recognition
            FaceEmbedding face_embedding = 4;
            BBoxEmbedding bbox_embedding = 5;

            // tags for title, etc...
            repeated string object_tags = 6;
        }
        repeated Person people_in_frame = 3;
        
        // vehicles in frame
        message Vehicle {
            // skaimot id
            uint64 id = 1;
            // tlbr 0 to 1 bounding box
            TLBR_Box box = 2;
            // bbox embedding
            BBoxEmbedding bbox_embedding = 3;
            // license plate string
            string license_plate = 4;
            // tags for other things
            repeated string object_tags = 5;
        }
        repeated Vehicle vehicles_in_frame = 4;

    }
    repeated CameraFrame camera_frames = 1;

}
